fixed collapse

--- a/businessTransfers/src/app/advisors/advisors.component.css
+++ b/businessTransfers/src/app/advisors/advisors.component.css
@@ -14,7 +14,7 @@
   background-image:url('../../assets/homeImage.jpg');
   max-height: 100vh;
   min-width: 100vw;
-  background-attachment: scroll;
+  background-attachment: fixed;
   background-position: center;
   background-repeat: repeat;
   background-size: cover;
