--- a/businessTransfers/src/app/home-slide/home-slide.component.css
+++ b/businessTransfers/src/app/home-slide/home-slide.component.css
@@ -8,6 +8,7 @@
   position: relative;
   float: left;
   margin-left: 5%;
+  height: 250px;
 }
 
 #box2 {
