--- a/businessTransfers/src/app/process/phase3/phase3.component.css
+++ b/businessTransfers/src/app/process/phase3/phase3.component.css
@@ -1,5 +1,5 @@
-html { overflow-y: scroll; }
-body { position: absolute; }
+/*html { overflow-y: scroll; }*/
+/*body { position: absolute; }*/
 
 #topParagraph {
   position: relative;
@@ -11,17 +11,17 @@ body { position: absolute; }
 }
 
 .slide {
-    background-image:url('../../../assets/homeImage.jpg');
-    min-height: 100vh;
-    min-width: 100vw;
-    background-attachment: scroll;
-    background-position: center;
-    background-repeat: repeat;
-    background-size: cover;
-    justify-content: center;
-    position:relative;
-    overflow-y: scroll;
-    padding-bottom: 5%;
+  background-image:url('../../../assets/homeImage.jpg');
+  max-height: 100vh;
+  min-width: 100vw;
+  background-attachment: scroll;
+  background-position: center;
+  background-repeat: repeat;
+  background-size: cover;
+  justify-content: center;
+  position:relative;
+  overflow-y: scroll;
+  padding-bottom: 5%;
 }
 
 .blurred-bg-1{
@@ -47,14 +47,14 @@ body { position: absolute; }
   margin-top: 3vh;
   margin-left: 8vw;
   transition: box-shadow .3s ease;
-  overflow: auto;
+  /*overflow: auto; */
 	&:active{
     @include box-shadow(0 20px 50px rgba(0,0,0,.9));
   }
 
   .content{
     margin: auto;
-    overflow: auto;
+    /*overflow: auto;*/
   }
 }
 
